spelling-adventures/src/index.css
* {
  font-size: 20px;
  box-sizing: content-box;
}

main {
  margin-top: 20em;
  margin-bottom: 30px;
}

h1,
h2 {
  text-align: center;
  font-family: "Inter", sans-serif;
  align-items: center;
  color: #2d334a;
}

header {
  background-color: #def193;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  padding: 1em;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
  z-index: 1000;
}

.sidebar {
  width: 80%;
  padding-left: 0;
  margin-left: 0;
}

.cite {
  padding-top: 50px;
  text-align: left;
}

/* nav bar */
.navbar-logo img {
  height: 40px;
  margin-right: 0;
  margin-bottom: 10px;
}

nav a {
  text-decoration: none;
  color: black;
}

nav {
  overflow: hidden;

  margin: auto;
  min-height: 2.5em;
  display: flex;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  font-family: "Inter", sans-serif;
  align-items: center;
  color: #2d334a;
}

nav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: column;
}

nav li {
  display: inline-block;
  padding: 5px 0;
  text-decoration: none;
  color: black;
}

nav li:hover {
  background-color: #c6d885;
  border-radius: 5px;
}

nav img:hover {
  animation: smoothRotate 1s ease-in-out infinite;
  transform: scale(1.1);
}

/* for logo hover effect */
@keyframes smoothRotate {
  0%,
  100% {
    transform: rotate(0deg);
  }

  50% {
    transform: rotate(10deg);
  }
}

/* Homecard CSS */

.card-container {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  margin: auto;
  padding: 0 3em;
  width: 100%;
  max-width: 200px;
}

.card-container .card {
  flex: 1;
  /* margin: 1em; */
  padding: 1.5em;
  background: linear-gradient(to bottom, #f0f0f0 0%, #d4d4d4 100%);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: white;
  border: 2px solid #ccc;
  border-radius: 5px;
  text-align: center;
  transition: transform 0.3s ease;
  margin: 20px 0;
  width: 100%;
}

.card-container .card:hover {
  transform: scale(1.05);
}

.card-container .card a {
  text-decoration: none;
  font-size: x-large;
  color: black;
}

.card-container .card img {
  width: 100%;
  height: auto;
  max-height: 10em;
  object-fit: cover;
}

.card-container .card p {
  font-size: 1.2rem;
  font-weight: 400;
}

.card-link {
  text-decoration: none;
  color: inherit;
  display: block;
}

.card-link:hover {
  text-decoration: underline;
}

/* Welcome CSS */

.welcome {
  padding-top: 2em;
  text-align: center;
}

.welcome h1 {
  font-size: 2rem;
  font-weight: 200;
}

.welcome h1 img {
  display: inline-block;
  vertical-align: middle;
  width: auto;
  height: 2em;
  margin-left: 0.2em;
}

/* flip card css */

.flip-card-front {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  transform-origin: center;
  backface-visibility: hidden;
}

.flip-card {
  text-align: center;
  background-color: white;
  border: 2px solid #ccc;
  margin: 20px auto;
  padding: 40px;
  border-radius: 5px;
  max-width: 400px;
  min-width: 200px;
  perspective: 1000px;
  transform-style: preserve-3d;
  transition: transform 0.6s;
  transform-origin: center;
}

.flip-card img {
  max-width: 100%;
  max-height: 20em;
  object-fit: cover;
  object-position: top;
  display: block;
}

.flipped {
  transform: rotateY(180deg);
}

.flip-card-back p {
  text-align: center;
}

.flip-card-back {
  backface-visibility: hidden;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transform: rotateY(180deg);
}

.speech-type,
.object-type {
  padding: 16px;
  background-color: #ffc6c7;
  border-radius: 10px;
  text-align: center;
  margin: 10px;
}

button,
.quiz button {
  background-color: #def193;
  color: #2d334a;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
  justify-content: center;
  margin: 0 auto;
}

.quiz-buttons-container {
  display: flex;
  justify-content: center;
  margin: 10px;
}

.quiz-next button {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  margin: 0;
}

.quiz-last button {
  margin-right: 10px;
}

button:hover,
.quiz button:hover {
  background-color: #ffd803;
  color: #2d334a;
}

/* Quiz CSS */

.quiz-card label {
  display: block;
  font-size: 16px;
  margin-bottom: 8px;
}

.quiz-card #word-input {
  border: none;
  border-bottom: 2px solid #000;
  font-size: 24px;
  width: 100px;
}

.quiz-card {
  text-align: center;
  background-color: white;
  border: 2px solid #ccc;
  margin: 20px auto;
  padding: 40px;
  /* Adjust padding for better spacing */
  border-radius: 5px;
  max-width: 400px;
  min-width: 200px;
}

.quiz-submit button {
  margin: 0 auto;
  background-color: #ffc6c7;
  text-align: center;
  display: block;
}

/* List Builder CSS */

.top-nav {
  display: flex;
  align-items: center;
}

.input-bar {
  display: flex;
  justify-content: center;
}

.input-bar input[type="text"] {
  background-color: #def193;
  border: none;
  height: 2em;
  width: 100%;
  font-size: large;
  padding: 0.5em;
  padding-left: 1em;
  border-radius: 10px;
  max-width: 300px;
}

.container {
  display: flex;
  justify-content: space-between;
}

.index-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.list {
  flex: 1;
  margin-left: 5%;
  margin-right: 5%;
  background-color: #def193;
  padding: 5px;
  border-radius: 10px;
  text-align: center;
}

.tags {
  flex: 1 1;
  margin-left: 5%;
  margin-right: 5%;
  background-color: #def193;
  padding: 5px;
  border-radius: 10px;
  text-align: center;
}

.word-buttons {
  margin-top: 5em;
  margin-left: 5%;
}

.dropdown-menu.show {
  z-index: 10;
}

.topnav-search {
  text-align: center;
  top: 25px;
  width: 100%;
  margin-top: 5%;
}

.top-nav {
  align-items: center;
}

.sidebar {
  font-size: 16px;
  margin-right: 70%;
  width: 100%;
  height: 30%;
  background-color: #def1936c;
  border: 1px solid #d9ec89;
  border-radius: 10%;
  padding-left: 0;
  margin-left: 0;
  margin-top: 0%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.filter-box {
  display: flex;
  align-items: center;
  width: 100%;
}

.filter-box .filter-icon {
  padding-left: 4px;
}

.filter-box input[type="text"] {
  background-color: #def1936c;
  border: none;
  height: 2em;
  width: 100%;
  font-size: large;
  padding-left: 1em;
}

.filter-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.filter-box input {
  display: block;
  width: 200px;
  padding-right: 1px;
}

footer {
  text-align: center;
}

footer p {
  font-size: 14px;
}

/* Media Queries  */
@media (min-width: 598px) {
  .card {
    margin: 20px 10px;
  }

  .card-container {
    padding: 0;
    flex-direction: column;
  }

  /* Account Page CSS */

  .account-details,
  .account-settings {
    text-align: center;
  }

  @media (min-width: 768px) {
    main {
      margin-top: 8em;
    }

    .welcome {
      margin-bottom: 0;
    }

    nav {
      justify-content: space-between;
    }

    nav ul {
      justify-content: space-between;
      flex-direction: row;
    }

    nav li {
      display: inline-block;
      padding: 10px;
      text-decoration: none;
      color: black;
    }

    .card-container {
      flex-direction: row;
      margin: 100px auto;
      padding: 0 1em;
      max-width: 768px;
    }

    .card-container .card {
      box-sizing: border-box;
    }
  }

  @media (min-width: 992px) {
    main {
      margin-top: 10em;
    }

    .welcome {
      margin-bottom: 4em;
    }

    nav {
      justify-content: space-between;
    }

    nav ul {
      justify-content: space-between;
      flex-direction: row;
    }

    nav li {
      display: inline-block;
      padding: 10px;
      text-decoration: none;
      color: black;
    }

    .card-container {
      flex-direction: row;
      margin: auto;
      max-width: 992px;
    }

    .card-container .card {
      width: calc(100% - 10px);
    }
  }
}

